[package]
name = "ycsb"
version = "0.1.0"
authors = ["5kbpers <tangminghua@pingcap.com>"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "ycsb"

[dependencies]
anyhow = "1.0"
clap = "2.33"
dashmap = { features = ["raw-api"], version = "3.11" }
rand = "0.7"
zipf = "6.1"
fxhash = "0.2"
lazy_static = "1.4"
